Added whitelist check ips endpoint
