# src/validators/index.ts
@@ -1,3 +1,4 @@
 export * from './pagination.validator';
 export * from './decision.validator';
 export * from './statistics.validator';
+export * from './allowlist.validator';
